--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,8 @@
 
   <depend>image_geometry</depend>
   <depend>message_filters</depend>
+  <depend>launch</depend>
+  <depend>launch_ros</depend>
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
